--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "@mantine/core": "^3.6.0",
     "@mantine/dates": "^3.6.2",
     "@mantine/hooks": "^3.6.0",
+    "@modulz/radix-icons": "^4.0.0",
+    "@prisma/client": "^3.8.1",
     "@remix-run/react": "^1.1.1",
     "@remix-run/serve": "^1.1.1",
     "dayjs": "^1.10.7",
+    "prisma": "^3.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "remix": "^1.1.1"
