--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "validate": "pnpm lint --quiet"
   },
   "dependencies": {
-    "@mantine/core": "^3.6.0",
+    "@mantine/core": "3.6.2",
     "@mantine/dates": "^3.6.2",
-    "@mantine/hooks": "^3.6.0",
+    "@mantine/hooks": "3.6.2",
     "@modulz/radix-icons": "^4.0.0",
     "@prisma/client": "^3.8.1",
     "@remix-run/react": "^1.1.1",
     "@remix-run/serve": "^1.1.1",
+    "bcryptjs": "^2.4.3",
     "dayjs": "^1.10.7",
     "prisma": "^3.8.1",
     "react": "^17.0.2",
@@ -29,15 +30,19 @@
   },
   "devDependencies": {
     "@remix-run/dev": "^1.1.1",
+    "@types/bcryptjs": "^2.4.2",
     "@types/node": "^17.0.8",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
+    "@typescript-eslint/eslint-plugin": "^5.10.2",
+    "@typescript-eslint/parser": "^5.10.2",
     "autoprefixer": "^10.4.2",
     "concurrently": "^7.0.0",
     "eslint": "^8.6.0",
     "eslint-config-kentcdodds": "^20.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.28.0",
     "husky": "^7.0.4",
     "postcss": "^8.4.5",
     "postcss-cli": "^9.1.0",
