--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "@prisma/client": "^3.8.1",
     "@remix-run/react": "^1.1.1",
     "@remix-run/serve": "^1.1.1",
+    "@remix-run/server-runtime": "^1.1.3",
     "bcryptjs": "^2.4.3",
     "dayjs": "^1.10.7",
     "prisma": "^3.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "remix": "^1.1.1"
+    "remix": "^1.1.1",
+    "remix-auth": "^3.2.1",
+    "remix-auth-form": "^1.1.1"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.1.1",
