--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "validate": "pnpm lint --quiet"
   },
   "dependencies": {
+    "@hookform/devtools": "^4.0.2",
     "@mantine/core": "3.6.2",
     "@mantine/dates": "^3.6.2",
     "@mantine/hooks": "3.6.2",
@@ -26,6 +27,7 @@
     "dayjs": "^1.10.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.27.1",
     "remix": "^1.1.1",
     "remix-auth": "^3.2.1",
     "remix-auth-form": "^1.1.1"
